Add a simple scene and improve file structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <h1>WEB GAME</h1>
     <div id="app"></div>
-    <script type="module" src="/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
