--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
+    <div id="play-overlay">
+      <p>Play</p>
+    </div>
   </body>
 </html>
