Add loading screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
     <div id="play-overlay">
-      <p>Play</p>
+      <p id="loading-text">Loading...</p>
+      <p id="play-text">Play</p>
     </div>
   </body>
 </html>
