--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="./src/main.ts"></script>
+        <script type="module" src="./src/index.ts"></script>
         <div id="play-overlay">
             <p id="loading-text">Loading...</p>
             <p id="play-text">Play</p>
